--- a/css/eyes.css
+++ b/css/eyes.css
@@ -13,7 +13,7 @@
     }
 
     100%{
-        /*height: 100%;*/
+        /*height: 100%; allows first half of animation to work in FireFox slightly*/
         height: inherit;
         top: 150px;
     }
